examples/test/testpolicy12766.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12766
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key1: value19
      key18: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value15
      podSelector:
        matchLabels:
          key48: value43
          key6: value29
